--- a/main.html
+++ b/main.html
@@ -9,22 +9,12 @@
 
 <body>
   <script type="text/javascript">
-    let companies =
-    `[
-    {
-      "name": "Strongbadia Corp",
-        "numberOfEmployees": 1000,
-          "ceo": "Strong Bad",
-            "rating": 3.6
-    },
-    {
-      "name": "Strongmad's Super Gym",
-        "numberOfEmployees": 700,
-          "ceo": null,
-            "rating": 5.0
-    }
-    ]`
-    console.log(JSON.parse(companies)[0].name);
+let prompt = require("prompt-sync")();
+
+// code below (replace this example)
+let answer = prompt("Guess a number: ");
+console.log("You answered: " + answer);
+
   </script>
   <header>
     <h1>0lga.ca</h1>
