trying to make the numbers app functional

--- a/main.html
+++ b/main.html
@@ -8,13 +8,7 @@
 </head>
 
 <body>
-  <script type="text/javascript">
-let prompt = require("prompt-sync")();
-
-// code below (replace this example)
-let answer = prompt("Guess a number: ");
-console.log("You answered: " + answer);
-
+  <script src="numberG.js">
   </script>
   <header>
     <h1>0lga.ca</h1>
@@ -22,6 +16,14 @@ console.log("You answered: " + answer);
   <p>
   <h3>Welcome and tonight</h3>
   </p>
+  <form>
+    <label for="textfield">How many ointments does Coach z have in his medicine cabinet?
+    </label>
+    <br>
+    <input type="text" id="textfield">
+    <br>
+    <button id="restart">Restart</button>
+  </form>
 </body>
 
 </html>
