first working node game

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src="numberG.js">
+  <script></script>
   </script>
   <header>
     <h1>0lga.ca</h1>
@@ -16,14 +16,6 @@
   <p>
   <h3>Welcome and tonight</h3>
   </p>
-  <form>
-    <label for="textfield">How many ointments does Coach z have in his medicine cabinet?
-    </label>
-    <br>
-    <input type="text" id="textfield">
-    <br>
-    <button id="restart">Restart</button>
-  </form>
 </body>
 
 </html>
