minor changes and addition of Css & JS

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="thisCss.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,17 @@
 </head>
 
 <body>
-  <script></script>
-  </script>
-  <header>
+  <script src="thisJsHunty.js"></script>
+  <header class="stylish">
     <h1>0lga.ca</h1>
   </header>
-  <p>
-  <h3>Welcome and tonight</h3>
-  </p>
+  <article>
+    <div>
+      <h3>Welcome and tonight</h3>
+      <img src="/home/olga/Downloads/OME_welcomeimg_600_v2.png" alt="0lga">
+    </div>
+  </article>
+
 </body>
 
 </html>
